--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,59 @@ VowelsCounter/obj/VowelsCounter.csproj.nuget.dgspec.json
 VowelsCounter/obj/VowelsCounter.csproj.nuget.g.props
 VowelsCounter/obj/VowelsCounter.csproj.nuget.g.targets
 VowelsCounter/VowelsCounter.csproj
+FibonacciSeries/bin/Debug/net8.0/FibonacciSeries.deps.json
+FibonacciSeries/bin/Debug/net8.0/FibonacciSeries.dll
+FibonacciSeries/bin/Debug/net8.0/FibonacciSeries.exe
+FibonacciSeries/bin/Debug/net8.0/FibonacciSeries.pdb
+FibonacciSeries/bin/Debug/net8.0/FibonacciSeries.runtimeconfig.json
+FibonacciSeries/obj/Debug/net8.0/apphost.exe
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.csproj.CoreCompileInputs.cache
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.csproj.FileListAbsolute.txt
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.dll
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.genruntimeconfig.cache
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.pdb
+FibonacciSeries/obj/Debug/net8.0/FibonacciSeries.sourcelink.json
+FibonacciSeries/obj/Debug/net8.0/ref/FibonacciSeries.dll
+FibonacciSeries/obj/Debug/net8.0/refint/FibonacciSeries.dll
+FindPowerByRecursion/bin/Debug/net8.0/FindPowerByRecursion.deps.json
+FindPowerByRecursion/bin/Debug/net8.0/FindPowerByRecursion.dll
+FindPowerByRecursion/bin/Debug/net8.0/FindPowerByRecursion.exe
+FindPowerByRecursion/bin/Debug/net8.0/FindPowerByRecursion.pdb
+FindPowerByRecursion/bin/Debug/net8.0/FindPowerByRecursion.runtimeconfig.json
+FindPowerByRecursion/obj/Debug/net8.0/apphost.exe
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.csproj.CoreCompileInputs.cache
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.csproj.FileListAbsolute.txt
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.dll
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.genruntimeconfig.cache
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.pdb
+FindPowerByRecursion/obj/Debug/net8.0/FindPowerByRecursion.sourcelink.json
+FindPowerByRecursion/obj/Debug/net8.0/ref/FindPowerByRecursion.dll
+FindPowerByRecursion/obj/Debug/net8.0/refint/FindPowerByRecursion.dll
+PrimeCompositPrinter/bin/Debug/net8.0/PrimeCompositPrinter.deps.json
+PrimeCompositPrinter/bin/Debug/net8.0/PrimeCompositPrinter.dll
+PrimeCompositPrinter/bin/Debug/net8.0/PrimeCompositPrinter.exe
+PrimeCompositPrinter/bin/Debug/net8.0/PrimeCompositPrinter.pdb
+PrimeCompositPrinter/bin/Debug/net8.0/PrimeCompositPrinter.runtimeconfig.json
+PrimeCompositPrinter/obj/Debug/net8.0/apphost.exe
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.csproj.CoreCompileInputs.cache
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.csproj.FileListAbsolute.txt
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.dll
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.genruntimeconfig.cache
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.pdb
+PrimeCompositPrinter/obj/Debug/net8.0/PrimeCompositPrinter.sourcelink.json
+PrimeCompositPrinter/obj/Debug/net8.0/ref/PrimeCompositPrinter.dll
+PrimeCompositPrinter/obj/Debug/net8.0/refint/PrimeCompositPrinter.dll
+VowelsCounter/bin/Debug/net8.0/VowelsCounter.deps.json
+VowelsCounter/bin/Debug/net8.0/VowelsCounter.dll
+VowelsCounter/bin/Debug/net8.0/VowelsCounter.exe
+VowelsCounter/bin/Debug/net8.0/VowelsCounter.pdb
+VowelsCounter/bin/Debug/net8.0/VowelsCounter.runtimeconfig.json
+VowelsCounter/obj/Debug/net8.0/apphost.exe
+VowelsCounter/obj/Debug/net8.0/ref/VowelsCounter.dll
+VowelsCounter/obj/Debug/net8.0/refint/VowelsCounter.dll
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.csproj.CoreCompileInputs.cache
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.csproj.FileListAbsolute.txt
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.dll
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.genruntimeconfig.cache
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.pdb
+VowelsCounter/obj/Debug/net8.0/VowelsCounter.sourcelink.json
