--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ StudentsDatabase/obj/project.packagespec.json
 StudentsDatabase/obj/rider.project.restore.info
 VowelsCounter/obj/project.packagespec.json
 VowelsCounter/obj/rider.project.restore.info
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.csproj.CoreCompileInputs.cache
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.csproj.FileListAbsolute.txt
