--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,183 @@ VowelsCounter/obj/project.packagespec.json
 VowelsCounter/obj/rider.project.restore.info
 DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.csproj.CoreCompileInputs.cache
 DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.csproj.FileListAbsolute.txt
+.vscode/launch.json
+.vscode/settings.json
+Addition/Addition.csproj
+Addition/bin/Debug/net8.0/Addition.deps.json
+Addition/bin/Debug/net8.0/Addition.dll
+Addition/bin/Debug/net8.0/Addition.exe
+Addition/bin/Debug/net8.0/Addition.pdb
+Addition/bin/Debug/net8.0/Addition.runtimeconfig.json
+Addition/obj/Addition.csproj.nuget.dgspec.json
+Addition/obj/Addition.csproj.nuget.g.props
+Addition/obj/Addition.csproj.nuget.g.targets
+Addition/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+Addition/obj/Debug/net8.0/Addition.AssemblyInfo.cs
+Addition/obj/Debug/net8.0/Addition.AssemblyInfoInputs.cache
+Addition/obj/Debug/net8.0/Addition.assets.cache
+Addition/obj/Debug/net8.0/Addition.csproj.CoreCompileInputs.cache
+Addition/obj/Debug/net8.0/Addition.csproj.FileListAbsolute.txt
+Addition/obj/Debug/net8.0/Addition.dll
+Addition/obj/Debug/net8.0/Addition.GeneratedMSBuildEditorConfig.editorconfig
+Addition/obj/Debug/net8.0/Addition.genruntimeconfig.cache
+Addition/obj/Debug/net8.0/Addition.GlobalUsings.g.cs
+Addition/obj/Debug/net8.0/Addition.pdb
+Addition/obj/Debug/net8.0/Addition.sourcelink.json
+Addition/obj/Debug/net8.0/apphost.exe
+Addition/obj/Debug/net8.0/ref/Addition.dll
+Addition/obj/Debug/net8.0/refint/Addition.dll
+Addition/obj/project.assets.json
+Addition/obj/project.nuget.cache
+BasicCliCalculator/bin/Debug/net8.0/BasicCliCalculator.deps.json
+BasicCliCalculator/bin/Debug/net8.0/BasicCliCalculator.dll
+BasicCliCalculator/bin/Debug/net8.0/BasicCliCalculator.exe
+BasicCliCalculator/bin/Debug/net8.0/BasicCliCalculator.pdb
+BasicCliCalculator/bin/Debug/net8.0/BasicCliCalculator.runtimeconfig.json
+BasicCliCalculator/obj/Debug/net8.0/apphost.exe
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.csproj.CoreCompileInputs.cache
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.csproj.FileListAbsolute.txt
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.dll
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.genruntimeconfig.cache
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.pdb
+BasicCliCalculator/obj/Debug/net8.0/BasicCliCalculator.sourcelink.json
+BasicCliCalculator/obj/Debug/net8.0/ref/BasicCliCalculator.dll
+BasicCliCalculator/obj/Debug/net8.0/refint/BasicCliCalculator.dll
+CSHARP.sln
+DecimalAndBinaryConversion/bin/Debug/net8.0/DecimalAndBinaryConversion.deps.json
+DecimalAndBinaryConversion/bin/Debug/net8.0/DecimalAndBinaryConversion.dll
+DecimalAndBinaryConversion/bin/Debug/net8.0/DecimalAndBinaryConversion.exe
+DecimalAndBinaryConversion/bin/Debug/net8.0/DecimalAndBinaryConversion.pdb
+DecimalAndBinaryConversion/bin/Debug/net8.0/DecimalAndBinaryConversion.runtimeconfig.json
+DecimalAndBinaryConversion/DecimalAndBinaryConversion.csproj
+DecimalAndBinaryConversion/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+DecimalAndBinaryConversion/obj/Debug/net8.0/apphost.exe
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.AssemblyInfo.cs
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.AssemblyInfoInputs.cache
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.assets.cache
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.csproj.CoreCompileInputs.cache
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.csproj.FileListAbsolute.txt
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.dll
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.GeneratedMSBuildEditorConfig.editorconfig
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.genruntimeconfig.cache
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.GlobalUsings.g.cs
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.pdb
+DecimalAndBinaryConversion/obj/Debug/net8.0/DecimalAndBinaryConversion.sourcelink.json
+DecimalAndBinaryConversion/obj/Debug/net8.0/ref/DecimalAndBinaryConversion.dll
+DecimalAndBinaryConversion/obj/Debug/net8.0/refint/DecimalAndBinaryConversion.dll
+DecimalAndBinaryConversion/obj/DecimalAndBinaryConversion.csproj.nuget.dgspec.json
+DecimalAndBinaryConversion/obj/DecimalAndBinaryConversion.csproj.nuget.g.props
+DecimalAndBinaryConversion/obj/DecimalAndBinaryConversion.csproj.nuget.g.targets
+DecimalAndBinaryConversion/obj/project.assets.json
+DecimalAndBinaryConversion/obj/project.nuget.cache
+DecimalAndBinaryConversion/Program.cs
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/1a4228c6-e554-45f0-9c48-a49db989be4a.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/91fe03b4-a6d3-42fc-bb02-79a96126a841.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/v17/.wsuo
+DecimalToBinarySTACK/.vs/slnx.sqlite
+DecimalToBinarySTACK/.vs/VSWorkspaceState.json
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe.config
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.pdb
+DeligateMethodsLearning/bin/Debug/net8.0/DeligateMethodsLearning.deps.json
+DeligateMethodsLearning/bin/Debug/net8.0/DeligateMethodsLearning.dll
+DeligateMethodsLearning/bin/Debug/net8.0/DeligateMethodsLearning.exe
+DeligateMethodsLearning/bin/Debug/net8.0/DeligateMethodsLearning.pdb
+DeligateMethodsLearning/bin/Debug/net8.0/DeligateMethodsLearning.runtimeconfig.json
+DeligateMethodsLearning/DeligateMethodsLearning.csproj
+DeligateMethodsLearning/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+DeligateMethodsLearning/obj/Debug/net8.0/apphost.exe
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.AssemblyInfo.cs
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.AssemblyInfoInputs.cache
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.assets.cache
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.csproj.CoreCompileInputs.cache
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.csproj.FileListAbsolute.txt
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.dll
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.GeneratedMSBuildEditorConfig.editorconfig
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.genruntimeconfig.cache
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.GlobalUsings.g.cs
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.pdb
+DeligateMethodsLearning/obj/Debug/net8.0/DeligateMethodsLearning.sourcelink.json
+DeligateMethodsLearning/obj/Debug/net8.0/ref/DeligateMethodsLearning.dll
+DeligateMethodsLearning/obj/Debug/net8.0/refint/DeligateMethodsLearning.dll
+DeligateMethodsLearning/obj/DeligateMethodsLearning.csproj.nuget.dgspec.json
+DeligateMethodsLearning/obj/DeligateMethodsLearning.csproj.nuget.g.props
+DeligateMethodsLearning/obj/DeligateMethodsLearning.csproj.nuget.g.targets
+DeligateMethodsLearning/obj/project.assets.json
+DeligateMethodsLearning/obj/project.nuget.cache
+EvenOddChecker/bin/Debug/net8.0/EvenOddChecker.deps.json
+EvenOddChecker/bin/Debug/net8.0/EvenOddChecker.dll
+EvenOddChecker/bin/Debug/net8.0/EvenOddChecker.exe
+EvenOddChecker/bin/Debug/net8.0/EvenOddChecker.pdb
+EvenOddChecker/bin/Debug/net8.0/EvenOddChecker.runtimeconfig.json
+EvenOddChecker/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+EvenOddChecker/obj/Debug/net8.0/apphost.exe
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.AssemblyInfo.cs
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.AssemblyInfoInputs.cache
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.assets.cache
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.csproj.CoreCompileInputs.cache
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.csproj.FileListAbsolute.txt
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.dll
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.GeneratedMSBuildEditorConfig.editorconfig
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.genruntimeconfig.cache
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.GlobalUsings.g.cs
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.pdb
+EvenOddChecker/obj/Debug/net8.0/EvenOddChecker.sourcelink.json
+EvenOddChecker/obj/Debug/net8.0/ref/EvenOddChecker.dll
+EvenOddChecker/obj/Debug/net8.0/refint/EvenOddChecker.dll
+EvenOddChecker/obj/EvenOddChecker.csproj.nuget.dgspec.json
+EvenOddChecker/obj/EvenOddChecker.csproj.nuget.g.props
+EvenOddChecker/obj/EvenOddChecker.csproj.nuget.g.targets
+EvenOddChecker/obj/project.assets.json
+EvenOddChecker/obj/project.nuget.cache
+PatternsPrinting/bin/Debug/net8.0/PatternsPrinting.deps.json
+PatternsPrinting/bin/Debug/net8.0/PatternsPrinting.dll
+PatternsPrinting/bin/Debug/net8.0/PatternsPrinting.exe
+PatternsPrinting/bin/Debug/net8.0/PatternsPrinting.pdb
+PatternsPrinting/bin/Debug/net8.0/PatternsPrinting.runtimeconfig.json
+PatternsPrinting/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+PatternsPrinting/obj/Debug/net8.0/apphost.exe
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.AssemblyInfo.cs
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.AssemblyInfoInputs.cache
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.assets.cache
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.csproj.CoreCompileInputs.cache
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.csproj.FileListAbsolute.txt
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.dll
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.GeneratedMSBuildEditorConfig.editorconfig
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.genruntimeconfig.cache
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.GlobalUsings.g.cs
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.pdb
+PatternsPrinting/obj/Debug/net8.0/PatternsPrinting.sourcelink.json
+PatternsPrinting/obj/Debug/net8.0/ref/PatternsPrinting.dll
+PatternsPrinting/obj/Debug/net8.0/refint/PatternsPrinting.dll
+PatternsPrinting/obj/PatternsPrinting.csproj.nuget.dgspec.json
+PatternsPrinting/obj/PatternsPrinting.csproj.nuget.g.props
+PatternsPrinting/obj/PatternsPrinting.csproj.nuget.g.targets
+PatternsPrinting/obj/project.assets.json
+PatternsPrinting/obj/project.nuget.cache
+PatternsPrinting/PatternsPrinting.csproj
+CSHARP.sln
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/1a4228c6-e554-45f0-9c48-a49db989be4a.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/91fe03b4-a6d3-42fc-bb02-79a96126a841.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/v17/.wsuo
+DecimalToBinarySTACK/.vs/slnx.sqlite
+DecimalToBinarySTACK/.vs/VSWorkspaceState.json
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe.config
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.pdb
+CSHARP.sln
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/1a4228c6-e554-45f0-9c48-a49db989be4a.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/FileContentIndex/91fe03b4-a6d3-42fc-bb02-79a96126a841.vsidx
+DecimalToBinarySTACK/.vs/DecimalToBinarySTACK/v17/.wsuo
+DecimalToBinarySTACK/.vs/slnx.sqlite
+DecimalToBinarySTACK/.vs/VSWorkspaceState.json
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.exe.config
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.exe
+DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.pdb
+DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
