added maxMinFinder & Basic Calculator

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,33 @@ DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
 DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.exe
 DecimalToBinarySTACK/obj/Debug/DecimalToBinarySTACK.pdb
 DecimalToBinarySTACK/bin/Debug/DecimalToBinarySTACK.pdb
+BasicCliCalculator/BasicCliCalculator.sln
+CSHARP.sln
+MaxAndMinFinder/bin/Debug/net8.0/MaxAndMinFinder.deps.json
+MaxAndMinFinder/bin/Debug/net8.0/MaxAndMinFinder.dll
+MaxAndMinFinder/bin/Debug/net8.0/MaxAndMinFinder.exe
+MaxAndMinFinder/bin/Debug/net8.0/MaxAndMinFinder.pdb
+MaxAndMinFinder/bin/Debug/net8.0/MaxAndMinFinder.runtimeconfig.json
+MaxAndMinFinder/MaxAndMinFinder.csproj
+MaxAndMinFinder/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+MaxAndMinFinder/obj/Debug/net8.0/apphost.exe
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.AssemblyInfo.cs
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.AssemblyInfoInputs.cache
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.assets.cache
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.csproj.CoreCompileInputs.cache
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.csproj.FileListAbsolute.txt
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.dll
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.GeneratedMSBuildEditorConfig.editorconfig
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.genruntimeconfig.cache
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.GlobalUsings.g.cs
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.pdb
+MaxAndMinFinder/obj/Debug/net8.0/MaxAndMinFinder.sourcelink.json
+MaxAndMinFinder/obj/Debug/net8.0/ref/MaxAndMinFinder.dll
+MaxAndMinFinder/obj/Debug/net8.0/refint/MaxAndMinFinder.dll
+MaxAndMinFinder/obj/MaxAndMinFinder.csproj.nuget.dgspec.json
+MaxAndMinFinder/obj/MaxAndMinFinder.csproj.nuget.g.props
+MaxAndMinFinder/obj/MaxAndMinFinder.csproj.nuget.g.targets
+MaxAndMinFinder/obj/project.assets.json
+MaxAndMinFinder/obj/project.nuget.cache
+CSHARP.sln
+CSHARP.sln
