after added some new programs

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,31 @@ MaxAndMinFinder/obj/project.assets.json
 MaxAndMinFinder/obj/project.nuget.cache
 CSHARP.sln
 CSHARP.sln
+FileHandling/bin/Debug/net8.0/FileHandling.deps.json
+CSHARP.sln
+FileHandling/bin/Debug/net8.0/FileHandling.dll
+FileHandling/bin/Debug/net8.0/FileHandling.exe
+FileHandling/bin/Debug/net8.0/FileHandling.pdb
+FileHandling/bin/Debug/net8.0/FileHandling.runtimeconfig.json
+FileHandling/FileHandling.csproj
+FileHandling/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+FileHandling/obj/Debug/net8.0/apphost.exe
+FileHandling/obj/Debug/net8.0/FileHandling.AssemblyInfo.cs
+FileHandling/obj/Debug/net8.0/FileHandling.AssemblyInfoInputs.cache
+FileHandling/obj/Debug/net8.0/FileHandling.assets.cache
+FileHandling/obj/Debug/net8.0/FileHandling.csproj.CoreCompileInputs.cache
+FileHandling/obj/Debug/net8.0/FileHandling.csproj.FileListAbsolute.txt
+FileHandling/obj/Debug/net8.0/FileHandling.dll
+FileHandling/obj/Debug/net8.0/FileHandling.GeneratedMSBuildEditorConfig.editorconfig
+FileHandling/obj/Debug/net8.0/FileHandling.genruntimeconfig.cache
+FileHandling/obj/Debug/net8.0/FileHandling.GlobalUsings.g.cs
+FileHandling/obj/Debug/net8.0/FileHandling.pdb
+FileHandling/obj/Debug/net8.0/FileHandling.sourcelink.json
+FileHandling/obj/Debug/net8.0/ref/FileHandling.dll
+FileHandling/obj/Debug/net8.0/refint/FileHandling.dll
+FileHandling/obj/FileHandling.csproj.nuget.dgspec.json
+FileHandling/obj/FileHandling.csproj.nuget.g.props
+FileHandling/obj/FileHandling.csproj.nuget.g.targets
+FileHandling/obj/project.assets.json
+FileHandling/obj/project.nuget.cache
+CSHARP.sln
